--- a/Lab11/week11Lab.html
+++ b/Lab11/week11Lab.html
@@ -113,6 +113,6 @@
     <footer>Promineo Tech ©️2023</footer>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="week11Lab.js"></script>
+    <script src="./week11Lab.js"></script>
   </body>
 </html>
